Fixed links too close in "Setting Up VPP"

--- a/custom_theme/css/extras.css
+++ b/custom_theme/css/extras.css
@@ -175,3 +175,11 @@ a.headerlink, a.headerlink:hover
 	{
 	color: #bde5fd;
 	}
+
+/* Spaced list items (i.e. links) */
+
+li.spacer
+	{
+	padding-top: 10px;
+	padding-bottom: 10px;
+	}
